layout shift bug fix at news page

--- a/styles/News.module.css
+++ b/styles/News.module.css
@@ -93,6 +93,6 @@
 	}
 	.p_styles {
 		margin-top: 15px;
-		line-height: 1.8rem;
+		line-height: 1.9rem;
 	}
 }
